--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/logo.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
-    <title>CredSettle</title>
+    <title>CredSettle - Best Loan And Credit Card Settlement in India | Personal Loan Wavier, Debt Relief & Anti-Harassement Services</title>
   </head>
   <body>
     <div id="root"></div>
