--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/logo.png" type="image/png">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="CredSettle helps you escape debt with expert support: anti-harassment assistance, tailored loan settlement, and trusted lawyer support. Regain financial freedom today." content="width=device-width, initial-scale=1.0" />
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
     <title>CredSettle - Best Loan And Credit Card Settlement in India | Personal Loan Wavier, Debt Relief & Anti-Harassement Services</title>
   </head>
