--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/logo.png" type="image/png">
-    <meta name="CredSettle is India's leading global debt settlement firm, offering expert loan settlement recovery, anti-harassment support, and trusted lawyer support. Boost your credit score and secure HDFC, ICICI, Axis, Kotak, credit card, and car loan settlements with our proven services." content="width=device-width, initial-scale=1.0" />
-    <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
-    <title>CredSettle - Best Loan And Credit Card Settlement in India | Personal Loan Wavier, Debt Relief & Anti-Harassement Services</title>
+    <link rel="icon" href="/logo.png" type="image/png" />
+    <meta
+      name="description"
+      content="CredSettle is India's leading global debt settlement firm,
+     offering expert loan settlement recovery, 
+     anti-harassment support, and trusted lawyer support. 
+     Boost your credit score and secure HDFC, ICICI, Axis, Kotak, credit card, and car loan settlements with our proven services."
+    />
+    <link
+      rel="sitemap"
+      type="application/xml"
+      title="Sitemap"
+      href="/sitemap.xml"
+    />
+    <title>
+      CredSettle - Best Loan And Credit Card Settlement in India | Personal Loan
+      Wavier, Debt Relief & Anti-Harassement Services
+    </title>
   </head>
   <body>
     <div id="root"></div>
