--- a/index.html
+++ b/index.html
@@ -1,25 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/logo.png" type="image/png" />
-    <meta
-      name="description"
-      content="CredSettle is India's leading global debt settlement firm,
-     offering expert loan settlement recovery, 
-     anti-harassment support, and trusted lawyer support. 
-     Boost your credit score and secure HDFC, ICICI, Axis, Kotak, credit card, and car loan settlements with our proven services."
-    />
-    <link
-      rel="sitemap"
-      type="application/xml"
-      title="Sitemap"
-      href="/sitemap.xml"
-    />
-    <title>
-      CredSettle - Best Loan And Credit Card Settlement in India | Personal Loan
-      Wavier, Debt Relief & Anti-Harassement Services
-    </title>
+    <link rel="icon" href="/logo.png" type="image/png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
+    <title>CredSettle - Best Loan And Credit Card Settlement in India | Personal Loan Wavier, Debt Relief & Anti-Harassement Services</title>
   </head>
   <body>
     <div id="root"></div>
