--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/logo.png" type="image/png">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
-    
+    <link rel="icon" href="/logo.png" type="image/png" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <link
+      rel="sitemap"
+      type="application/xml"
+      title="Sitemap"
+      href="/sitemap.xml"
+    />
+
     <!-- SEO Meta Description -->
-    <meta name="description" content="CredSettle is India's leading loan and credit card settlement service provider. Get personal loan waiver, debt relief solutions, and protection from harassment by recovery agents." />
-    
-    <title>CredSettle - Best Loan And Credit Card Settlement in India | Personal Loan Wavier, Debt Relief & Anti-Harassement Services</title>
+    <meta name="description" content="Settle your loans and credit card debt easily with CredSettle. Get debt relief, loan waivers & protection from harassment by recovery agents in India." />
+
+
+    <title>
+      CredSettle - Best Loan And Credit Card Settlement in India | Personal Loan
+      Wavier, Debt Relief & Anti-Harassement Services
+    </title>
   </head>
   <body>
     <div id="root"></div>
